<resources>
    <string name="app_name">GitHubUser</string>
    <string name="username">Username</string>
    <string name="searchbar_hint">Search…</string>
    <string name="tvUserFullName">Fullname</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100">100</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <string name="dark_mode">Dark Mode</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Setting</string>
    <string name="share">Share</string>
</resources>